# object-detection-training

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pixi.toml  pyproject.toml
.claude/: agents  archetypes  permissions.json  skills
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  code-review.yml  lint.yml  test-engineer.yml  test.yml
conf/: train.yaml  train_basketball_rfdetr.yaml  train_basketball_yolox.yaml  train_yolox.yaml
conf/callbacks/: default.yaml
conf/data/: coco.yaml  coco_yolox.yaml  data_basketball.yaml
conf/logging/: tensorboard.yaml  wandb.yaml
conf/model/: base.yaml  rfdetr_base.yaml  rfdetr_large.yaml  rfdetr_medium.yaml  rfdetr_nano.yaml  rfdetr_small.yaml  yolox_l.yaml  yolox_m.yaml  yolox_nano.yaml  yolox_s.yaml
conf/models/: base.yaml  rfdetr_base.yaml  rfdetr_large.yaml  rfdetr_medium.yaml  rfdetr_nano.yaml  rfdetr_small.yaml  yolox_base.yaml  yolox_l.yaml  yolox_m.yaml  yolox_nano.yaml  yolox_s.yaml  yolox_tiny.yaml  yolox_x.yaml
conf/task/: train.yaml
conf/trainer/: default.yaml  trainer_yolox.yaml
scripts/: build-docker.sh  dev-install.sh  overfit_test_yolox.py  verify_yolox_weights.py
src/object_detection_training/: task_manager.py  tasks.py  train.py
src/object_detection_training/callbacks/: __init__.py  ema.py  model_info.py  onnx_export.py  plotting.py  statistics.py  visualization.py
src/object_detection_training/data/: __init__.py  base.py  coco.py  coco_data_module.py  coco_detection_dataset.py  dataset_stats.py  detection_dataset.py  mosaic.py
src/object_detection_training/metrics/: curves.py
src/object_detection_training/models/: __init__.py  base.py  rfdetr_lightning.py  rfdetr_wrappers.py  yolox_lightning.py
src/object_detection_training/models/rfdetr/: __init__.py  coco.py  collate.py  config.py  detr.py  lwdetr.py  matcher.py  model_factory.py  position_encoding.py  segmentation_head.py  transformer.py  transforms.py
src/object_detection_training/models/rfdetr/backbone/: __init__.py  backbone.py  dinov2.py  dinov2_with_windowed_attn.py  projector.py
src/object_detection_training/models/rfdetr/backbone/dinov2_configs/: dinov2_base.json  dinov2_large.json  dinov2_small.json  dinov2_with_registers_large.json  dinov2_with_registers_small.json
src/object_detection_training/models/rfdetr/ops/: __init__.py
src/object_detection_training/models/rfdetr/ops/functions/: __init__.py  ms_deform_attn_func.py
src/object_detection_training/models/rfdetr/ops/modules/: __init__.py  ms_deform_attn.py
src/object_detection_training/models/rfdetr/util/: benchmark.py  box_ops.py  drop_scheduler.py  early_stopping.py  files.py  get_param_dicts.py  metrics.py  misc.py  obj365_to_coco_model.py  utils.py
src/object_detection_training/models/yolox/: __init__.py  darknet.py  network_blocks.py  yolo_head.py  yolo_pafpn.py  yolox.py
src/object_detection_training/rfdetr/: __init__.py  coco.py  transforms.py
src/object_detection_training/utils/: boxes.py  download.py  hydra.py  json_utils.py  plotting.py  seed.py
src/object_detection_training/yolox/: darknet.py  yolo_head.py  yolo_pafpn.py  yolox.py
tests/: test_optimizer.py  test_rfdetr_extraction.py  test_rfdetr_parameterization.py  test_train.py
